--- a/FrontEnd/src/app/student-exam/eye-track/eye-track.component.html
+++ b/FrontEnd/src/app/student-exam/eye-track/eye-track.component.html
@@ -1,3 +1,5 @@
 <script src="https://webgazer.cs.brown.edu/webgazer.js?" defer></script>
-<script src="../../../assets/js/index.js" defer></script>
+<script src="../../../assets/js/index.js" defer>
+
+</script>
 
