--- a/FrontEnd/src/app/nav-bar/nav-bar.component.html
+++ b/FrontEnd/src/app/nav-bar/nav-bar.component.html
@@ -23,7 +23,7 @@
           <a class="nav-link" href="#!"><b>Contact</b></a>
         </li>
         <button type="button" class="btn btn-dark ms-3" routerLink="/login" routerLinkActive="active" *ngIf="!getStatus()" ><b>Sign In</b></button>
-        <button type="button" class="btn btn-light ms-3" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight" *ngIf="getStatus()"><i class="fa fa-user" ></i><b></b></button>
+        <button type="button" class="btn btn-light ms-3" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight" *ngIf="getStatus()" (click)="getProfile()"><i class="fa fa-user" ></i><b></b></button>
         <button type="button" class="btn btn-light ms-3" (click)="onLogout()" *ngIf="getStatus()"><i class="fas fa-sign-out-alt"></i></button>
       </ul>
     </div>
@@ -36,6 +36,28 @@
       <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
   </div>
   <div class="offcanvas-body">
-    <app-user-profile></app-user-profile>
+    <div class=" main-bg">
+      <br> <br>
+      <div>
+        <h1 class="logo-badge text-center"><span class="fa fa-user-circle"></span></h1>
+        <br>
+        <h4 class="text-name">{{userDetails.fullName}}</h4>
+      </div>
+      <br>
+      <br>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item"><b>Email : </b><p class="normal-text">{{userDetails.email}}</p></li>
+        <br>
+        <li class="list-group-item"><b>Institute : </b><p class="normal-text">{{userDetails.institute}}</p></li>
+        <br>
+        <li class="list-group-item"><b>Phone Number : </b><p class="normal-text">{{userDetails.phone_number}}</p></li>
+        <br>
+        <li class="list-group-item" *ngIf="!userDetails.isTeacher"><b>Batch : </b><p class="normal-text">{{userDetails.batch}}</p></li>
+        <br *ngIf="!userDetails.isTeacher">
+        <li class="list-group-item" *ngIf="!userDetails.isTeacher"><b>Roll : </b><p class="normal-text">{{userDetails.roll}}</p></li>
+        <br *ngIf="!userDetails.isTeacher">
+        <li class="list-group-item" *ngIf="userDetails.isTeacher"><b>Designation : </b><p class="normal-text">{{userDetails.designation}}</p></li>
+        <br>
+      </ul>
   </div>
 </div>
