--- a/FrontEnd/src/styles.css
+++ b/FrontEnd/src/styles.css
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+
+a, h1, h2, h3, h4, h5, button, div, img, p{
+  font-family: 'Ubuntu', sans-serif;
+}
