--- a/FrontEnd/src/app/details-student-exam-card/details-student-exam-card.component.html
+++ b/FrontEnd/src/app/details-student-exam-card/details-student-exam-card.component.html
@@ -24,15 +24,17 @@
         </div>
     </div>
       <div class="col">
-        <h2>Participante List&nbsp;&nbsp;<i class="fa fa-users"></i></h2>
+        <h2>Participant List&nbsp;&nbsp;<i class="fa fa-users"></i></h2>
         <hr class="cl-head">
         <br><br>
         &nbsp;&nbsp;&nbsp;
-        <span class="fa fa-user-circle"></span>
-        &nbsp;Md. Siam
+        <div *ngFor="let participant of participants">
+          <span class="fa fa-user-circle"></span>
+          &nbsp;{{participant.fullName}}
+        </div>
         <hr>
       </div>
     </div>
-    
+    <object [data]="examDetails.question | safe" type="application/pdf" width="800" height="600"> </object>
   </div>
 </div>
