--- a/FrontEnd/src/app/student-exam-card/student-exam-card.component.html
+++ b/FrontEnd/src/app/student-exam-card/student-exam-card.component.html
@@ -2,7 +2,7 @@
 <div class=" main-bg">
     <div class="container">
         <div>
-            <button type="button" class="btn btn-success float-end" data-bs-toggle="modal" data-bs-target="#exampleModalJoin" ><i class="fa fa-plus"></i> <b> Join New Exam</b></button>
+            <button type="button" class="btn btn-success float-end" data-bs-toggle="modal" data-bs-target="#exampleModalJoin" style="background-color: #D0C9C0; color:black"><i class="fa fa-plus"></i> <b> Join New Exam</b></button>
         </div>
         <br><br>
       <div class="row">
@@ -13,12 +13,12 @@
             </div>
             <div class="card-header no-border code justify-content-between">
             <span class="badge bg-light text-dark">Exam Code: {{exam._id}}</span>
-            <div class="">
+            <!-- <div class="">
                 <button type="button" class="btn btn-light">
                 <i class="fa fa-bell icon"> &nbsp; </i>
                 <span class="badge bg-primary"> 4 </span>
                 </button>
-            </div>
+            </div> -->
 
             </div>
             <div class="card-body pt-0">
