--- a/FrontEnd/src/app/nav-bar/nav-bar.component.html
+++ b/FrontEnd/src/app/nav-bar/nav-bar.component.html
@@ -1,7 +1,7 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-scroll fixed-top shadow-0 border-bottom border-dark">
   <div class="container">
-    <h1><a class="navbar-brand" href="" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"> !BLINK</a></h1>
+    <h1 class="logo"><a class="navbar-brand"></a>!BLINK</h1>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
       data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
       aria-label="Toggle navigation">
