--- a/FrontEnd/src/app/sign-up/sign-up.component.html
+++ b/FrontEnd/src/app/sign-up/sign-up.component.html
@@ -3,68 +3,69 @@
       <div>
           <h1 class="logo-badge text-whitesmoke"><span class="fa fa-user-circle"></span></h1>
       </div>
-          <h3 class="text-darkyellow">!Blink</h3>
-          <p class="text-whitesmoke">Sign Up</p>
+          <h3 class="text-darkgreen">Sign Up</h3>
+          <br>
       <div class="container-content">
           <form class="margin-t">
               <div class="mb-3">
                 <input type="radio" (click)="setUserType(false)" class="btn-check" name="options-outlined" id="warning-outlined" autocomplete="off" checked>
-                <label class="btn btn-outline-warning" for="warning-outlined">I am a student</label>
-  
+                <label class="btn btn-outline-dark radio-button" for="warning-outlined">I am a student</label>
+
                 <input type="radio" (click)="setUserType(true)" class="btn-check" name="options-outlined" id="danger-outlined" autocomplete="off">
-                <label class="btn btn-outline-warning" for="danger-outlined">I am a teacher</label>
+                <label class="btn btn-outline-dark radio-button" for="danger-outlined">I am a teacher</label>
               </div>
-  
+
               <div class="form-group mb-2">
-                <label class="text-darkyellow">FULL NAME</label>
+                <label class="text-darkgreen">FULL NAME</label>
                 <input type="text" name="fullName" class="form-control" placeholder="Full Name" required="" #fullName="ngModel" [(ngModel)]="this.selectedUser.fullName" [ngModelOptions]="{standalone: true}">
               </div>
               <div class="form-group mb-2">
-                <label class="text-darkyellow">EMAIL ADDRESS</label>
+                <label class="text-darkgreen">EMAIL ADDRESS</label>
                 <input type="email" name="email" class="form-control" placeholder="Email Address" required="" #email="ngModel" [(ngModel)]="this.selectedUser.email" [ngModelOptions]="{standalone: true}">
               </div>
               <div class="form-group mb-2">
-                <label class="text-darkyellow">INSTITUTE NAME</label>
+                <label class="text-darkgreen">INSTITUTE NAME</label>
                 <input type="text" name="institute" class="form-control" placeholder="School/College Name" required="" #institute="ngModel" [(ngModel)]="this.selectedUser.institute" [ngModelOptions]="{standalone: true}">
               </div>
               <div *ngIf="userType()" class="form-group mb-2">
-                <label class="text-darkyellow">DESIGNATION</label>
+                <label class="text-darkgreen">DESIGNATION</label>
                 <input type="text" name="designation" class="form-control" placeholder="Designation" required="" #designation="ngModel" [(ngModel)]="this.selectedUser.designation" [ngModelOptions]="{standalone: true}">
               </div>
               <div *ngIf="!userType()" class="form-group mb-2">
-                <label class="text-darkyellow">BATCH</label>
+                <label class="text-darkgreen">BATCH</label>
                 <input type="number" name="batch" class="form-control" placeholder="Batch No" required="" #batch="ngModel" [(ngModel)]="this.selectedUser.batch" [ngModelOptions]="{standalone: true}">
               </div>
               <div *ngIf="!userType()" class="form-group mb-2">
-                <label class="text-darkyellow">ROLL</label>
+                <label class="text-darkgreen">ROLL</label>
                 <input type="number" name="roll" class="form-control" placeholder="Roll No" required="" #roll="ngModel" [(ngModel)]="this.selectedUser.roll" [ngModelOptions]="{standalone: true}">
               </div>
               <div class="form-group mb-2">
-                <label class="text-darkyellow">PHONE NO</label>
+                <label class="text-darkgreen">PHONE NO</label>
                 <input type="text" name="phone_number" class="form-control" placeholder="Phone No" required="" #phone_number="ngModel" [(ngModel)]="this.selectedUser.phone_number" [ngModelOptions]="{standalone: true}">
               </div>
               <div class="form-group mb-2">
-                <label class="text-darkyellow left">PASSWORD</label>
+                <label class="text-darkgreen left">PASSWORD</label>
                 <input type="password" name="password" class="form-control" placeholder="***********" required="" #password="ngModel" [(ngModel)]="this.selectedUser.password" [ngModelOptions]="{standalone: true}"
                 minlength="6" required [ngClass]="{'invalid-textbox':signUp}">
               </div>
               <div class="form-group mb-4">
-                <label class="label text-darkyellow">RE-WRITE PASSWORD</label>
+                <label class="label text-darkgreen">RE-WRITE PASSWORD</label>
                 <input type="password" name="cPassword" class="form-control" placeholder="***********" required="" [(ngModel)]="this.cPassword" [ngModelOptions]="{standalone: true}">
                 <label *ngIf="passwordMismatch"><div style="color: red;">Passwords Mismatched</div></label>
             </div>
-  
+
             <div class="alert" *ngIf="serverErrorMessages">
                 {{serverErrorMessages}}
             </div>
-  
-              <button type="submit" class="form-button button-l margin-b" (click)="signUp()">Sign Up</button>
-  
-              <a class="text-darkyellow" href="#"><small>Forgot password?</small></a>
+
+              <button type="submit" (click)="signUp()" class="btn btn-light form-button button-l margin-b btn-h" style="border: none;">Sign Up</button>
+
+
+              <a class="text-darkgreen" href="#"><small>Forgot password?</small></a>
               <p class="text-whitesmoke text-center"><small>Do not have an account? </small>
-              <a href="" class="text-darkyellow" routerLink="signup" (click)="hasAccount()"><small >Sign in</small></a></p>
+              <a href="" class="text-darkgreen" routerLink="signup" (click)="hasAccount()"><small >Sign in</small></a></p>
           </form>
-          <p class="margin-t text-darkyellow"><small> <b> Copyright &copy; 2022 !Blink </b> </small> </p>
+          <p class="margin-t text-darkgreen"><small> <b> Copyright &copy; 2022 !Blink </b> </small> </p>
       </div>
     </div>
   </div>
