--- a/FrontEnd/src/app/details-student-exam-card/details-student-exam-card.component.html
+++ b/FrontEnd/src/app/details-student-exam-card/details-student-exam-card.component.html
@@ -36,7 +36,7 @@
       </div>
     </div>
     <br> <br>
-    <object [data]="examDetails.question | safe" type="application/pdf" width="800" height="600"> </object>
+    <!-- <object [data]="examDetails.question | safe" type="application/pdf" width="800" height="600"> </object> -->
   </div>
 </div>
 
