navbar collapse now working

--- a/FrontEnd/src/app/student-exam/student-exam.component.html
+++ b/FrontEnd/src/app/student-exam/student-exam.component.html
@@ -26,6 +26,7 @@
     </div>
     <div class="col-1"> </div>
   </div>
+  <button (click)="checkCameraPermission()">check</button>
   <app-window-monitoring></app-window-monitoring>
 </div>
 
