--- a/FrontEnd/src/app/student-exam/eye-track/eye-track.component.html
+++ b/FrontEnd/src/app/student-exam/eye-track/eye-track.component.html
@@ -3,3 +3,23 @@
 
 </script>
 
+<h1 align="center">camera Recording</h1>
+
+<div style="text-align: center;">
+
+    <button id="start" class="start" (click)="recordStart()" [disabled]="isRecording">
+      Start Recording
+    </button>
+
+
+    <button id="stop" class="stop" (click)="recordStop()" [disabled]="!isRecording">
+      Stop Recording
+    </button>
+
+    <button id="stop" (click)="downloadBlob()" *ngIf="hasVideo">
+      Download Recording
+    </button>
+
+    <video *ngIf="hasVideo" #recordVideo width="500" controls></video>
+
+  </div>
