--- a/FrontEnd/src/app/student-exam/student-exam.component.html
+++ b/FrontEnd/src/app/student-exam/student-exam.component.html
@@ -19,7 +19,7 @@
       <br><br><br><br><br>
       <br><br><br><br><br>
       <br><br><br><br><br>
-      <app-screen-record></app-screen-record>
+      <!-- <app-screen-record></app-screen-record> -->
     </div>
     <div class="col-6">
       <object [data]="examDetails.question | safe" type="application/pdf" width="1000" height="800"> </object>
@@ -27,11 +27,11 @@
     <div class="col-1"> </div>
   </div>
   <button (click)="checkCameraPermission()">check</button>
-  <app-window-monitoring></app-window-monitoring>
+  <!-- <app-window-monitoring></app-window-monitoring> -->
 </div>
 
 
-<!-- <app-eye-track></app-eye-track> -->
+<app-eye-track></app-eye-track>
 
 
 
