--- a/FrontEnd/src/app/student-exam/student-exam.component.html
+++ b/FrontEnd/src/app/student-exam/student-exam.component.html
@@ -28,10 +28,11 @@
   </div>
   <button (click)="checkCameraPermission()">check</button>
   <!-- <app-window-monitoring></app-window-monitoring> -->
+  <app-screen-record></app-screen-record>
 </div>
 
 
-<app-eye-track></app-eye-track>
+<!-- <app-eye-track></app-eye-track> -->
 
 
 
