--- a/FrontEnd/src/app/student-exam/eye-track/eye-track.component.html
+++ b/FrontEnd/src/app/student-exam/eye-track/eye-track.component.html
@@ -3,7 +3,7 @@
 
 </script>
 
-<h1 align="center">camera Recording</h1>
+<!-- <h1 align="center">camera Recording</h1>
 
 <div style="text-align: center;">
 
@@ -22,4 +22,4 @@
 
     <video *ngIf="hasVideo" #recordVideo width="500" controls></video>
 
-  </div>
+  </div> -->
