--- a/FrontEnd/src/app/student-exam/screen-record/screen-record.component.html
+++ b/FrontEnd/src/app/student-exam/screen-record/screen-record.component.html
@@ -1,5 +1,5 @@
 <!-- <br><br><br><br><br> -->
-<h1 align="center">Screen Recording</h1>
+<!-- <h1 align="center">Screen Recording</h1>
 
 <div style="text-align: center;">
 
@@ -18,7 +18,7 @@
 
     <video *ngIf="hasVideo" #recordVideo width="500" controls></video>
 
-  </div>
+  </div> -->
 
   <!-- <script src="screen-recording.js"></script> -->
 
