--- a/FrontEnd/src/app/details-teacher-exam-card/details-teacher-exam-card.component.html
+++ b/FrontEnd/src/app/details-teacher-exam-card/details-teacher-exam-card.component.html
@@ -13,6 +13,17 @@
             <i class="fa fa-clock"></i> {{examDetails.startTime}} <br>
             <i class="fa fa-stopwatch"></i> {{examDetails.duration}} minutes <br>
             <br><br>
+            <div *ngIf="!hide">
+              <button class="btn btn-dark">{{remHour}}</button> <b> : </b>
+              <button class="btn btn-dark"> {{remMinute}} </button> <b> : </b>
+              <button class="btn btn-dark">{{remSecond}}</button>
+            </div>
+            <div *ngIf="hide">
+              <button class="btn btn-light">{{remHour}}</button> <b> : </b>
+              <button class="btn btn-light"> {{remMinute}} </button> <b> : </b>
+              <button class="btn btn-light">{{remSecond}}</button>
+            </div>
+            <br><br>
             <div class="btn-button">
               <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="onClick(examDetails)">Invite </button>&nbsp;&nbsp;
               <button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#exampleModalEdit" (click)="onClick(examDetails)">Edit Exam </button>&nbsp;&nbsp;
