--- a/FrontEnd/src/app/student-exam/student-exam.component.html
+++ b/FrontEnd/src/app/student-exam/student-exam.component.html
@@ -1,7 +1,7 @@
 <div class="exam">
   <br><br><br><br><br>
   <div class="calibrationDiv" *ngIf="!calibrationDone && stepDone >= 5">
- 
+
     <input type="button" (click)="calibrationClick(0)" class="calibration" id="pt1" style="background-color: red; opacity: 0.2">
     <input type="button" (click)="calibrationClick(1)" class="calibration" id="pt2" style="background-color: red; opacity: 0.2">
     <input type="button" (click)="calibrationClick(2)" class="calibration" id="pt3" style="background-color: red; opacity: 0.2">
@@ -12,8 +12,8 @@
     <input type="button" (click)="calibrationClick(7)" class="calibration" id="pt8" style="background-color: red; opacity: 0.2">
     <input type="button" (click)="calibrationClick(8)" class="calibration" id="pt9" style="background-color: red; opacity: 0.2">
   </div>
-  
-  
+
+
   <!-- <app-screen-record *ngIf="stepDone > 2"></app-screen-record> -->
   <div class="afterCalibration" *ngIf="calibrationDone">
     <div class="row">
@@ -26,16 +26,18 @@
       <div class="col-6">
         <object [data]="examDetails.question | safe" type="application/pdf" width="1000" height="800"> </object>
       </div>
-      <div class="col-1"> </div>
+      <div class="col-1">
+        {{remDay}} : {{remHour}} : {{remMinute}} : {{remSecond}}
+      </div>
     </div>
     <!-- <button>check</button> -->
     <!-- <app-window-monitoring></app-window-monitoring> -->
     <!-- <app-screen-record></app-screen-record> -->
   </div>
-  
- 
+
+
   <app-eye-track *ngIf="stepDone >= 5"></app-eye-track>
- 
+
 </div>
 
 
