kick shows examinee details

--- a/FrontEnd/src/app/details-teacher-exam-card/details-teacher-exam-card.component.html
+++ b/FrontEnd/src/app/details-teacher-exam-card/details-teacher-exam-card.component.html
@@ -243,11 +243,11 @@
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          Are you sure to kick examinee?
+          Are you sure to kick examinee? The examinee won't be able to join again!
           <br>
-          <b>[Examinee Name : {{selectedExam.examName}}]</b>
+          <b>[Examinee Name : {{kickParticipant.fullName}}]</b>
           <br>
-          <b>[Examinee Name : {{selectedExam._id}}]</b>
+          <b>[Examinee Email : {{kickParticipant.email}}]</b>
         </div>
         <form>
             <div class="modal-footer">
