--- a/FrontEnd/src/app/student-exam/student-exam.component.html
+++ b/FrontEnd/src/app/student-exam/student-exam.component.html
@@ -19,15 +19,25 @@
     <div class="row">
       <div class="col-1"> </div>
       <div class="col-4">
-        <br><br><br><br><br>
-        <br><br><br><br><br>
-        <br><br><br><br><br>
+        <br><br><br>
+        Exam Remaining Time:
+        <div *ngIf="!hide">
+          <button class="btn btn-dark">{{remHour}}</button> <b> : </b>
+          <button class="btn btn-dark"> {{remMinute}} </button> <b> : </b>
+          <button class="btn btn-dark">{{remSecond}}</button>
+        </div>
+        <div *ngIf="hide">
+          <button class="btn btn-light">{{remHour}}</button> <b> : </b>
+          <button class="btn btn-light"> {{remMinute}} </button> <b> : </b>
+          <button class="btn btn-light">{{remSecond}}</button>
+        </div>
+        <br><br>
       </div>
       <div class="col-6">
         <object [data]="examDetails.question | safe" type="application/pdf" width="1000" height="800"> </object>
       </div>
       <div class="col-1">
-        {{remDay}} : {{remHour}} : {{remMinute}} : {{remSecond}}
+        <!-- {{remDay}} : {{remHour}} : {{remMinute}} : {{remSecond}} -->
       </div>
     </div>
     <!-- <button>check</button> -->
